<resources>
    <string name="addedInfo">추가정보</string>
    <string name="addedPhoto">추가사진</string>
    <string name="addedPhotoText">* 추가사진 등록시 더 높은 견적을 받을 수 있습니다.</string>
    <string name="agreeTermOfUse">이용약관 및 개인정보취급방침에 동의해주세요</string>
    <string name="app_name">바이카 딜러전용</string>
    <string name="auctionedPrice">낙찰금액</string>
    <string name="bidding">입찰</string>
    <string name="biddingPrice1">+100</string>
    <string name="biddingPrice2">+50</string>
    <string name="biddingPrice3">+10</string>
    <string name="biddingPrice4">+5</string>
    <string name="biddingSuccessPrice">낙찰가</string>
    <string name="bidPriceMustOverCurrentPrice">입찰 금액은 현재 금액보다 커야합니다.</string>
    <string name="bidPriceMustLessThan500m">최대 가격은 5억 원 이하로 입력해주세요.</string>
    <string name="call">전화걸기</string>
    <string name="cancel">취소</string>
    <string name="carDescriptionFromDealer">판매자 차량설명</string>
    <string name="carHistory">사고보험 이력조회</string>
	<string name="carHistoryTitle1">중고차 사고이력 정보 요약</string>
	<string name="carHistoryTitle2">자동차 일반 사양 정보</string>
	<string name="carHistoryTitle3">자동차 용도 변경이력 정보</string>
	<string name="carHistoryTitle4">자동차 번호 소유자 변경이력 정보</string>
	<string name="carHistoryTitle5">자동차 특수 사고이력 정보</string>
	<string name="carHistoryTitle6">보험사고이력 정보 : 내차 피해</string>
	<string name="carHistoryTitle7">보험사고이력 정보 : 타차 가해</string>
	<string name="carHistoryTitle11">자동차 일반사양</string>
	<string name="carHistoryTitle12">자동차 용도 변경이력</string>
	<string name="carHistoryTitle13">자동차 번호 / 소유자 변경횟수</string>
	<string name="carHistoryTitle14">자동차 보험 특수 사고이력 (전손, 침수, 도난)</string>
	<string name="carHistoryTitle15">보험사고이력 : 내차 피해</string>
	<string name="carHistoryTitle16">보험사고이력 : 타차 피해</string>
	<string name="carHistoryTitle21">제작사</string>
	<string name="carHistoryTitle22">자동차명</string>
	<string name="carHistoryTitle23">연식</string>
	<string name="carHistoryTitle24">사용연료</string>
	<string name="carHistoryTitle25">배기량</string>
	<string name="carHistoryTitle26">차체형상</string>
	<string name="carHistoryTitle27">용도 및 차종</string>
	<string name="carHistoryTitle28">최초 보험 가입일자</string>
	<string name="carHistoryTitle31">대여용도 사용이력(렌트카)</string>
	<string name="carHistoryTitle32">영업용도 사용이력</string>
	<string name="carHistoryTitle33">관용용도 사용이력</string>
	<string name="carHistoryTitle51">전손 보험사고</string>
	<string name="carHistoryTitle52">도난 보험사고</string>
	<string name="carHistoryTitle53">침수 보험사고</string>
	<string name="carInfo">차량정보</string>
	<string name="carOption">차량 옵션 및 튜닝</string>
    <string name="carPhoto">차량사진</string>
    <string name="carRegistrationPhoto1">앞면 / 측면</string>
    <string name="carRegistrationPhoto2">뒷면 / 측면</string>
    <string name="carRegistrationPhoto3">시트/변속기/네비</string>
    <string name="carRegistrationPhoto4">주행거리</string>
    <string name="carRegistrationTitle1">차량정보</string>
    <string name="carRegistrationTitle2">세부차량정보</string>
    <string name="carRegistrationTitle3">필수사진</string>
    <string name="carRegistrationTitle4">추가사진</string>
    <string name="carRegistrationTitle5">성능점검 기록부</string>
    <string name="carRegistrationTitle6">옵션 및 튜닝</string>
    <string name="carRegistrationTitle7">판매자 차량설명</string>
    <string name="carRegistrationTitle8">바이카 공지사항 및 이용 약관 동의</string>
    <string name="carSearchString_accidentHistory">사고 상세내역</string>
    <string name="certifyPhoneNumber">휴대폰번호 인증</string>
    <string name="changePw">비밀번호 변경</string>
    <string name="changingPartsHistory">부품 교환 이력</string>
    <string name="checkCertificationNumber">올바른 인증번호를 입력해주세요.</string>
    <string name="checkChangingPartsHistory">부품 교환 이력을 입력해주세요.</string>
    <string name="checkEmail">정확한 이메일주소를 입력해주세요.</string>
    <string name="checkEmployeeCardImage">사원증이미지 아이콘을 클릭해 사진을 업로드해주세요.</string>
    <string name="checkNameCardImage">명함이미지 아이콘을 클릭해 사진을 업로드해주세요.</string>
    <string name="checkNewPassword">8~15자 내의 새 비밀번호를 입력해주세요.</string>
    <string name="checkNickname">3~15자 내의 닉네임을 입력해주세요.</string>
    <string name="checkOriginalPassword">8~15자 내의 기존 비밀번호를 입력해주세요.</string>
    <string name="checkPassword">8~15자 내의 비밀번호를 입력해주세요.</string>
    <string name="checkPasswordConfirm">두 비밀번호가 일치하지 않습니다.</string>
    <string name="checkPhoneNumber">올바른 휴대폰 번호를 입력해주세요.</string>
    <string name="checkReplyContent">내용을 입력해주세요.</string>
    <string name="checkToCertifyPhoneNumber">휴대폰번호를 인증해주세요.</string>
    <string name="commonInfo">일반정보</string>
    <string name="complete_auth">수정되었습니다.</string>
    <string name="complete_bid">입찰신청이 완료되었습니다.</string>
    <string name="complete_certifyPhoneNumber">휴대폰번호가 인증되었습니다.</string>
    <string name="complete_changePw">비밀번호가 변경되었습니다.</string>
    <string name="complete_completeSelling">거래완료 처리되었습니다.</string>
    <string name="complete_delete">삭제되었습니다.</string>
    <string name="complete_edit">수정 완료</string>
    <string name="complete_editUserInfo">프로필정보 수정이 완료되었습니다.</string>
    <string name="complete_loadingImage">이미지 불러오기 완료</string>
    <string name="complete_payment">결제가 완료되었습니다.</string>
    <string name="complete_report">신고가 완료되었습니다.</string>
    <string name="complete_sendEmail">비밀번호 재설정을 위한 링크를 발송하였습니다.\n이메일을 확인해주세요.</string>
    <string name="complete_sendSMS">SMS를 발송하였습니다.</string>
    <string name="complete_selling">판매 완료</string>
    <string name="complete_writeReply">댓글 작성 완료</string>
    <string name="confirm">확인</string>
    <string name="currentPrice">현재가</string>
    <string name="customerSatisfactionDegree">고객 만족도</string>
    <string name="dealer">딜러</string>
    <string name="dealerInfo">판매자 정보</string>
    <string name="dealerInfoCertified">판매자 정보가 인증되었습니다.</string>
    <string name="dealerLevel1">새내기</string>
    <string name="dealerLevel2">일반딜러</string>
    <string name="dealerLevel3">우수딜러</string>
    <string name="dealerLevel4">최우수딜러</string>
    <string name="delete">삭제</string>
    <string name="detailCarInfo">세부차량정보</string>
    <string name="detailCarInfoString1">제조사</string>
    <string name="detailCarInfoString2">모델</string>
    <string name="detailCarInfoString3">세부모델</string>
    <string name="detailCarInfoString4">연월식</string>
    <string name="detailCarInfoString5">차량번호</string>
    <string name="detailCarInfoString6">주행거리</string>
    <string name="detailCarInfoString7">배기량</string>
    <string name="detailCarInfoString8">판매지역</string>
    <string name="detailCarInfoString9">변속기</string>
    <string name="detailCarInfoString10">연료</string>
    <string name="detailCarInfoString11">사고유무</string>
    <string name="detailCarInfoString12">1인신조</string>
    <string name="detailOptionText1">내/외장 옵션</string>
    <string name="detailOptionText2">편의장치</string>
    <string name="detailOptionText3">안전장치</string>
    <string name="detailOptionText4">오디오/AV/네비게이션</string>
    <string name="duplicatedSignIn">다른 기기에서 로그인했습니다.</string>
    <string name="edit">수정</string>
    <string name="emptyDealerDesc">딜러 소개가 없습니다.</string>
    <string name="failToBidding">입찰하지 못했습니다.</string>
    <string name="failToChangePw">비밀번호를 변경하지 못했습니다.</string>
    <string name="failToCompleteSelling">거래 완료 상태로 변경하지 못했습니다.</string>
    <string name="failToDelete">삭제하지 못했습니다.</string>
    <string name="failToEditUserInfo">프로필 수정 실패</string>
    <string name="failToLoadCarInfo">차량 정보를 불러오지 못했습니다.</string>
    <string name="failToLoadDealerInfo">딜러 정보를 불러오지 못했습니다.</string>
    <string name="failToLoadList">리스트를 불러오지 못했습니다.</string>
    <string name="failToFindPw">비번 찾기 실패</string>
    <string name="failToPay">결제 실패</string>
    <string name="failToReportCar">해당 매물을 신고하지 못했습니다.</string>
    <string name="failToSendAuthRequest">인증번호를 발송하지 못했습니다.</string>
    <string name="failToSendSMS">SMS를 발송하지 못했습니다.</string>
    <string name="failToSignIn">로그인 실패</string>
    <string name="failToSignUp">회원가입 실패</string>
    <string name="failToUpdateUserInfo">사용자 정보를 수정하지 못했습니다.</string>
    <string name="failToWriteReply">댓글 작성 실패</string>
	<string name="finalPrice">최종 낙찰가</string>
    <string name="hadAccident">사고보험 이력이 존재합니다. 버튼을 눌러 확인해주세요.</string>
    <string name="highestPrice">최고가</string>
    <string name="hintForAddress">상사주소를 검색해주세요.</string>
    <string name="hintForCarDescriptionForBid">차량에 대한 추가 설명을 입력해주세요. 정성껏 작성하여 높은 금액으로 입찰될 수 있습니다.\n(단순 교환 내용도 기입해주세요.)</string>
    <string name="hintForCarDescriptionForOther">차량에 대한 추가 설명을 입력해주세요.\n(단순 교환 내용도 기입해주세요.)</string>
    <string name="hintForCertificationNumber">인증번호를 입력해주세요.</string>
    <string name="hintForComplex">단지명과 상사이름 (ex 간석매매단지 나이스모터스)</string>
    <string name="hintForDetailCarHistory">기재되지 않은 사고 내용은 최종입찰금액의 감액사유가 될 수 있습니다.</string>
    <string name="hintForDetailCarInfo1">차량 번호를 입력해주세요.  예) 02가 1234</string>
    <string name="hintForDetailCarInfo2">주행거리를 입력해주세요.  예) 103555</string>
    <string name="hintForDetailCarInfo3">배기량을 입력해주세요.  예) 2500</string>
    <string name="hintForDetailCarInfo4">차량 색상을 입력해주세요.  예) 다이아몬드 화이트</string>
    <string name="hintForDetailCarInfo51">희망금액 입력 (바이카 본사 참고사항 / 단위 만원)</string>
    <string name="hintForDetailCarInfo52">판매가 입력 (바이카 본사 참고사항 / 단위 만원)</string>
    <string name="hintForEmailSignIn">이메일 주소를 입력해주세요.</string>
    <string name="hintForEmailSignUp">이메일 주소 입력(아이디로 사용 됩니다)</string>
    <string name="hintForFindPw">가입하신 이메일 주소를 입력해주세요.</string>
    <string name="hintForIntroduce">인사글은 소비자가 딜러 선택시 보여지는 글이며, 신뢰 있는 글 작성으로 보다 많은 차량 매입을 성사시키세요.</string>
    <string name="hintForName">본명을 입력해주세요. (딜러증에 적혀있는 동일한 이름)</string>
    <string name="hintForNewPassword">새 비밀번호</string>
    <string name="hintForNewPasswordConfirm">새 비밀번호 확인</string>
    <string name="hintForNickname">별명을 입력해주세요.(3~15자)</string>
    <string name="hintForOriginalPassword">기존 비밀번호</string>
    <string name="hintForPassword">비밀번호를 입력해주세요.</string>
    <string name="hintForPassword2">비밀번호 입력(아이디 비밀번호 입니다)</string>
    <string name="hintForPasswordConfirm">비밀번호를 다시 입력해주세요.(8~15자)</string>
    <string name="hintForPhoneNumber">휴대폰번호를 입력해주세요.</string>
    <string name="hintForPriceBid">경매 시작가격을 입력해주세요.</string>
	<string name="hintForPriceNormal">판매 가격을 입력해주세요.</string>
	<string name="hintForSearch">(선택) 차량명을 입력해주세요.</string>
	<string name="hintForSearchArea">동 이름을 검색해 주세요. (ex 신사동)</string>
	<string name="holdOffByAdmin">관리자에 의해 보류 중인 매물입니다.\n(자세한 사항은 바이카에 문의해주세요.)</string>
	<string name="holdOffByAdmin2">관리자에 의해 보류 중인 매물입니다.</string>
    <string name="introduce">인사글</string>
    <string name="mainImage">* 차량 번호판과 주행거리수가 정확히 보여지는 사진을 등록해주세요.</string>
    <string name="maxDisplacementCannotUnderMinDisplacement">최고 배기량은 최저 배기량보다 작을 수 없습니다</string>
    <string name="maxPriceCannotUnderMinPrice">최고가는 최저가보다 작을 수 없습니다</string>
    <string name="minDisplacementCannotOverMaxDisplacement">최저 배기량은 최고 배기량보다 클 수 없습니다</string>
    <string name="minPriceCannotOverMaxPrice">최저가는 최고가보다 클 수 없습니다</string>
    <string name="month">월</string>
    <string name="myBiddingPrice">내 입찰가</string>
    <string name="myPointTitle1">나의 가상계좌</string>
    <string name="myPointTitle2">현재 보유 적립금</string>
    <string name="myPointTitle3">적립금내역</string>
    <string name="myPointHintText">가상계좌에 입금하시면 자동으로 적립금에 충전됩니다.</string>
    <string name="noCarHistory">사고보험 이력이 없습니다.</string>
    <string name="notification">알림</string>
    <string name="notificationSetting">알림설정</string>
    <string name="kakaoTalkNotInstalled">카카오톡이 설치 되어 있지 않습니다.</string>
    <string name="lastList">마지막 리스트입니다.</string>
    <string name="like">좋아요</string>
    <string name="regardAgree">가입과 함께 약관에 동의 하신것으로 간주합니다.</string>
	<string name="searchCompanyAddress">상사주소 검색</string>
    <string name="signOut">로그아웃</string>
	<string name="toggle_notification">전체 알림 ON / OFF</string>
    <string name="toggle_bidding">입찰 알림창 ON / OFF</string>
    <string name="touchImageIcon">사원증이미지, 명함이미지 아이콘을 클릭해 사진을 업로드해주세요.</string>
    <string name="wannaChangePassword">비밀번호를 변경하시겠습니까?</string>
    <string name="wannaSignOut">로그아웃하시겠습니까?</string>
    <string name="wannaWithdraw">탈퇴하시겠습니까?</string>
    <string name="withdraw">회원탈퇴</string>
</resources>