<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingPage_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_color_page_bg_white1" >

    <com.byecar.views.TitleBar
        android:id="@+id/settingPage_titleBar"
        android:layout_width="match_parent"
    	android:layout_height="0dp" />
    
    <ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/settingPage_titleBar"
    	android:fillViewport="true" >
        
        <RelativeLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" >
    		
            <TextView 
		        android:id="@+id/settingPage_tvNotificationTitle"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:text="@string/notificationSetting"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
            
            <TextView 
		        android:id="@+id/settingPage_tvNotification"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvNotificationTitle"
		        android:text="@string/toggle_notification"
		        android:textColor="@color/new_color_text_darkgray"
		        android:gravity="center_vertical" />
            
            <Button 
                android:id="@+id/settingPage_btnNotification"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/settingPage_tvNotification"
		        android:layout_alignParentRight="true" />
            
            <TextView 
		        android:id="@+id/settingPage_tvBidding"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvNotification"
		        android:text="@string/toggle_bidding"
		        android:textColor="@color/new_color_text_darkgray"
		        android:gravity="center_vertical" />
            
            <Button 
                android:id="@+id/settingPage_btnBidding"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/settingPage_tvBidding"
		        android:layout_alignParentRight="true" />
            
            <View
		        android:layout_width="match_parent"
		        android:layout_height="1px"
		        android:layout_below="@id/settingPage_tvNotification"
		        android:background="@color/color_ltgray" />
            
			<TextView 
		        android:id="@+id/settingPage_tvChangePwTitle"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvBidding"
		        android:text="@string/changePw"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
            
            <TextView 
		        android:id="@+id/settingPage_tvChangePw"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvChangePwTitle"
		        android:text="@string/wannaChangePassword"
		        android:textColor="@color/new_color_text_darkgray"
		        android:gravity="center_vertical" />
            
            <Button 
                android:id="@+id/settingPage_btnChangePw"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/settingPage_tvChangePw"
		        android:layout_alignParentRight="true"
		        android:background="@drawable/setting_password_btn" />

            <TextView 
		        android:id="@+id/settingPage_tvWithdrawTitle"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvChangePw"
		        android:text="@string/withdraw"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
            
            <TextView 
		        android:id="@+id/settingPage_tvWithdraw"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvWithdrawTitle"
		        android:text="@string/wannaWithdraw"
		        android:textColor="@color/new_color_text_darkgray"
		        android:gravity="center_vertical" />
            
            <Button 
                android:id="@+id/settingPage_btnWithdraw"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/settingPage_tvWithdraw"
		        android:layout_alignParentRight="true"
		        android:background="@drawable/setting_out_btn" />
            
            <TextView 
		        android:id="@+id/settingPage_tvSignOutTitle"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvWithdraw"
		        android:text="@string/signOut"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
            
            <TextView 
		        android:id="@+id/settingPage_tvSignOut"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/settingPage_tvSignOutTitle"
		        android:text="@string/wannaSignOut"
		        android:textColor="@color/new_color_text_darkgray"
		        android:gravity="center_vertical" />
            
            <Button 
                android:id="@+id/settingPage_btnSignOut"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/settingPage_tvSignOut"
		        android:layout_alignParentRight="true"
		        android:background="@drawable/setting_logout_btn" />
                        
        </RelativeLayout>
        
    </ScrollView>
        
</RelativeLayout>
