<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUpForDealerPage_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg" >

    <com.byecar.views.TitleBar
        android:id="@+id/signUpForDealerPage_titleBar"
        android:layout_width="match_parent"
    	android:layout_height="0dp" />
        
	<ScrollView
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/signUpForDealerPage_titleBar"
    	android:fillViewport="true" >
        
        <RelativeLayout
            android:layout_width="match_parent"
    		android:layout_height="wrap_content" >
    
            <TextView
		        android:id="@+id/signUpForDealerPage_tvTitleText1"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
            
            <TextView 
                android:id="@+id/signUpForDealerPage_tvCertified"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForDealerPage_tvTitleText1"
		        android:layout_centerHorizontal="true"
		        android:gravity="center" />
            
            <View 
                android:id="@+id/signUpForDealerPage_checked"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/signUpForDealerPage_tvCertified"
		        android:layout_toLeftOf="@id/signUpForDealerPage_tvCertified"
		        android:background="@drawable/user_check" />
            
            <Button 
                android:id="@+id/signUpForDealerPage_btnCertifyPhoneNumber"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForDealerPage_tvCertified"
		        android:background="@drawable/sign2_phone_btn" />
            
            <TextView
		        android:id="@+id/signUpForDealerPage_tvTitleText2"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForDealerPage_btnCertifyPhoneNumber"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />
			
			<Button 
                android:id="@+id/signUpForDealerPage_btnImage1"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/signUpForDealerPage_tvTitleText2"
		        android:background="@drawable/sign2_picture2_btn" />
            
            <ImageView
                android:id="@+id/signUpForDealerPage_ivImage1"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/signUpForDealerPage_btnImage1"
		        android:layout_alignLeft="@id/signUpForDealerPage_btnImage1"
		        android:scaleType="centerCrop" />
            
            <Button 
                android:id="@+id/signUpForDealerPage_btnImage2"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/signUpForDealerPage_btnImage1"
		        android:layout_toRightOf="@id/signUpForDealerPage_btnImage1"
		        android:background="@drawable/sign2_picture3_btn" />
            
            <ImageView
                android:id="@+id/signUpForDealerPage_ivImage2"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/signUpForDealerPage_btnImage2"
		        android:layout_alignLeft="@id/signUpForDealerPage_btnImage2"
		        android:scaleType="centerCrop" />

            <TextView
		        android:id="@+id/signUpForDealerPage_tvUploadText"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForDealerPage_btnImage1"
		        android:gravity="center_vertical"
		        android:text="@string/touchImageIcon"
		        android:textColor="@color/holo_text" />
            
            <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
                android:id="@+id/signUpForDealerPage_etInfo1"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForDealerPage_tvUploadText"
		        android:layout_centerHorizontal="true" />
            
            <com.outspoken_kid.views.holo.holo_light.HoloStyleEditText 
                android:id="@+id/signUpForDealerPage_etInfo2"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForDealerPage_etInfo1"
		        android:layout_centerHorizontal="true" />
            
            <Button 
                android:id="@+id/signUpForDealerPage_btnSearchArea"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForDealerPage_etInfo2"
		        android:text="@string/searchCompanyAddress"
		        android:textColor="#fff"
		        android:gravity="center"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:paddingLeft="20dp"
		        android:paddingRight="20dp"
		        android:background="@drawable/sign2_search_btn_a" />

            <TextView
		        android:id="@+id/signUpForDealerPage_tvTitleText3"
		        android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_below="@id/signUpForDealerPage_btnSearchArea"
		        android:textColor="#fff"
		        android:gravity="center_vertical"
		        android:background="@color/title_gray" />            
            <TextView
		        android:id="@+id/signUpForDealerPage_tvIntroduce"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/signUpForDealerPage_tvTitleText3"
		        android:gravity="center_vertical"
		        android:text="@string/introduce"
		        android:textColor="@color/holo_text" />
            
			<EditText
			    android:id="@+id/signUpForDealerPage_etIntroduce"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForDealerPage_tvIntroduce"
		        android:textColor="@color/holo_text"
				android:textColorHint="@color/holo_text_hint"
				android:hint="@string/hintForIntroduce"
				android:gravity="left|top"
				android:padding="10dp"
				android:background="@drawable/white_round_box" />

			<TextView
		        android:id="@+id/signUpForDealerPage_tvTermOfUse"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/signUpForDealerPage_etIntroduce"
		        android:gravity="center_vertical"
		        android:text="@string/regardAgree"
		        android:textColor="@color/holo_text" />
			
			<Button 
			    android:id="@+id/signUpForDealerPage_btnTermOfUse"
		        android:layout_width="wrap_content"
		        android:layout_height="0dp"
		        android:layout_alignTop="@id/signUpForDealerPage_tvTermOfUse"
		        android:layout_alignParentRight="true"
		        android:background="@drawable/sign2_term_btn" />
			
			<Button 
			    android:id="@+id/signUpForDealerPage_btnSignUp"
		        android:layout_width="0dp"
		        android:layout_height="0dp"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@id/signUpForDealerPage_tvTermOfUse"
		        android:background="@drawable/sign2_complete_btn" />

			<!-- Bottom blank. -->
			
			<View 
			    android:layout_width="10dp"
		        android:layout_height="20dp"
		        android:layout_below="@id/signUpForDealerPage_btnSignUp" />
						
        </RelativeLayout>
        
    </ScrollView>
		    
</RelativeLayout>
